[gd_scene load_steps=3 format=3 uid="uid://cq6qdi8ng865b"]

[ext_resource type="Script" path="res://world.gd" id="1_clmlb"]
[ext_resource type="PackedScene" uid="uid://b6vqln767240f" path="res://player.tscn" id="2_pcg07"]

[node name="World" type="Node2D"]
script = ExtResource("1_clmlb")
PlayerScene = ExtResource("2_pcg07")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 650.0
color = Color(0, 0, 0, 1)

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Host" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 407.0
offset_top = 266.0
offset_right = 451.0
offset_bottom = 297.0
text = "Host"

[node name="Join" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 465.0
offset_top = 266.0
offset_right = 509.0
offset_bottom = 297.0
text = "Join"

[node name="Start" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 524.0
offset_top = 266.0
offset_right = 570.0
offset_bottom = 297.0
text = "Start"

[node name="Name" type="LineEdit" parent="Menu"]
layout_mode = 0
offset_left = 354.0
offset_top = 222.0
offset_right = 622.0
offset_bottom = 253.0
placeholder_text = "Input Name Here"

[node name="SpawnPoint" type="Node2D" parent="."]
position = Vector2(584, 306)

[connection signal="pressed" from="Menu/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Menu/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Menu/Start" to="." method="_on_start_pressed"]
[connection signal="text_changed" from="Menu/Name" to="." method="_on_name_text_changed"]
